# McGuffinQuest

./: CMakeLists.txt  Consumables.cpp  Consumables.h  Consumables2.cpp  Consumables2.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Game2.h  Graphics.cpp  Graphics.h  Inventory.cpp  Inventory.h  Main.cpp  OSInputs.h  PHandle_Stub.txt  Player.cpp  Player.h  StyleGuide.txt  Terrain.cpp  Terrain.h  c++11.txt  dungeonbytes.h  map_test.cpp
Entities/: CMakeLists.txt  Entity.h  Player.h
Inventory/: CMakeLists.txt  Consumables.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h
Map/: CMakeLists.txt  Map.cpp  Map.h  dungeonbytes.h
